# mdmc2exif

./: .gitignore  LICENSE  README.md  mdmc2exif.py  mdmc2exif.spec  pyproject.toml  requirements.txt  setup.py
mdmc2exif/: mdmc2exif.py
