[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
name = "mdmc2exif"
version = "1.2.7"
description = "Simple script to add  ImageDescription EXIF tag to images, based on data store in csv file."
readme = "README.md"
requires-python = ">=3.0"
keywords = ["exif", "Minolta", "Minolta Data Memory Card"]
authors = [
  {name="Bohdan Bobrowski", email="bohdanbobrowski@gmail.com"},
]
maintainers = [
  {name="Bohdan Bobrowski", email="bohdanbobrowski@gmail.com"}
]
dependencies = [
    "piexif"
]

[project.scripts]
mdmc2exif = "mdmc2exif.mdmc2exif:main"

[tool.setuptools]
packages = ["mdmc2exif"]

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "I"]
